# spy_research

./: .gitignore  AGENTS.md  FEATURE_SPEC.md  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  pyproject.toml
apps/chart_viewer/backend/: main.py
apps/chart_viewer/frontend/: index.html  package-lock.json  package.json
apps/chart_viewer/frontend/src/: main.ts  style.css
data/features/: spy_1h_rth_features.csv  spy_1h_rth_features.parquet  spy_30m_rth_features.csv  spy_30m_rth_features.parquet  spy_5m_rth_features.parquet
data/processed/: spy_1h_rth.csv  spy_1h_rth.parquet  spy_1m_rth.parquet  spy_30m_rth.csv  spy_30m_rth.parquet  spy_5m_rth.csv  spy_5m_rth.parquet
docs/: DATA_VALIDATION_REPORT.md  SPY_RESEARCH_WORKFLOW_GUIDE.md
notebooks/: 00_data_check.ipynb  01_resample_context.ipynb  02_signal_prototype.ipynb  03_backtest_underlying.ipynb
outputs/reports/: data_validation_summary.csv
scripts/: build_features.py  build_processed_data.py  quick_check.ps1  validate_data.py
src/spy_research/: config.py
src/spy_research/backtest/: engine.py
src/spy_research/data/: loaders.py  sessions.py  validation.py
src/spy_research/features/: __init__.py  build.py  levels.py  resample.py  schema.py  time.py  volatility.py  volume.py  vwap.py
src/spy_research/signals/: rules.py
tests/: test_features_f1.py  test_resample.py
