[project]
name = "spy-research"
version = "0.1.0"
description = "Narrow SPY-first intraday quant research project."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spy_research"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
